fix spacing and links

--- a/style.css
+++ b/style.css
@@ -141,6 +141,10 @@ body {
   .main .book img {
     max-width: 420px;
   }
+  .main .about {
+    display: flex;
+    flex-direction: column;
+  }
   .main .about p {
     max-width: 395px;
   }
@@ -187,6 +191,7 @@ body {
   font-style: normal;
   font-weight: bold;
   font-size: 1em;
+  align-self: flex-start;
   padding: 0.75em 1em;
   background-color: #6F5ED3;
   border: 1px solid rgba(76, 55, 200, 0.5);
